Revisión del funcionamiento de los test. Pasan todos. Se refactoriza el codigo.